object-oriented setup

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
 	<head>
 		<title>Frame-O-Matic</title>
-		<script type="text/javascript" src="index.js"></script>
-		<script type="text/javascript" src="data/json/utilt.json"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<!-- CLASSES -->
+		<script type="text/javascript" src="js/classes/sfb.js"></script>
+
+		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript" src="data/utilt.json"></script>
 	</head>
 	<body>
-		<img id="fax" src="fax.png" style="display:none">
-		<img id="fd" src="background.png" style="display:none">
+		<img id="stage">
+		<img id="character">
 		<canvas id="canvas" width="1920" height="1080"></canvas>
 	</body>
 </html>
