added screenshot tool

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 		<script type="text/javascript" src="js/classes/sfb.js"></script>
 
 		<script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript" src="data/utilt.json"></script>
+		<script type="text/javascript" src="data/fox/utilt.json"></script>
+		<script type="text/javascript" src="data/fox/dsmash.json"></script>
+		<script type="text/javascript" src="data/fox/ftilt.json"></script>
+		<script type="text/javascript" src="data/fox/dtilt.json"></script>
+		<script type="text/javascript" src="data/fox/jab.json"></script>
+		<script type="text/javascript" src="data/fox/usmash.json"></script>
 	</head>
 	<body>
 		<img id="stage">
