major structural rework, preference files added

--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 		<title>Frame-O-Matic</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<!-- CLASSES -->
-		<script type="text/javascript" src="js/classes/sfb.js"></script>
-
+		<script type="text/javascript" src="js/canvas.js"></script>
+		<script type="text/javascript" src="js/tools.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript" src="data/fox/utilt.json"></script>
-		<script type="text/javascript" src="data/fox/dsmash.json"></script>
-		<script type="text/javascript" src="data/fox/ftilt.json"></script>
-		<script type="text/javascript" src="data/fox/dtilt.json"></script>
-		<script type="text/javascript" src="data/fox/jab.json"></script>
-		<script type="text/javascript" src="data/fox/usmash.json"></script>
 	</head>
 	<body>
+		<canvas id="canvas" width="1920" height="1080"></canvas>
+		<div id="control_panel_container"><div id="control_panel"></div></div>
 		<img id="stage">
 		<img id="character">
-		<canvas id="canvas" width="1920" height="1080"></canvas>
 	</body>
 </html>
