added options for lookahead and move selector

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 		<script type="text/javascript" src="js/index.js"></script>
 	</head>
 	<body>
-		<canvas id="canvas" width="1920" height="1080"></canvas>
-		<div id="control_panel_container"><div id="control_panel"></div></div>
+		<canvas id="canvas" width="1440" height="1080"></canvas>
+		<div id="control_panel_container">
+			<div id="control_panel"><button type="button" id="apply_button" onclick="applySettings()">APPLY</button></div>
+		</div>
+
 		<img id="stage">
 		<img id="character">
 	</body>
